[package]
name = "laplas"
version = "0.0.0"
authors = ["Sergey Zharkov <70puf4bx9@relay.firefox.com>"]
edition = "2018"
license = "MIT"
description = "Laplas project template"
homepage = "https://github.com/laplas-rs/laplas-rs"
documentation = "https://laplas-rs.github.io/"
repository = "https://github.com/laplas-rs/laplas-rs.git"
readme = "README.md"

exclude = [
    ".idea",
    "target"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

